--- a/app/public/index.html
+++ b/app/public/index.html
@@ -13,6 +13,12 @@
     <link rel="stylesheet" href="./css/app.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <style>
+      td{
+        box-sizing: border-box;
+        padding: 6px;
+      }
+    </style>
     <title>React App</title>
   </head>
   <body>
