--- a/app/public/index.html
+++ b/app/public/index.html
@@ -14,9 +14,36 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <style>
+      button{
+        opacity:1;
+      }
+
+      table{
+        margin-top: 20px;
+        border-spacing:0px;
+      }
+
       td{
         box-sizing: border-box;
-        padding: 6px;
+        padding: 15px;
+        border: none;
+      }
+
+      i{
+        margin-left: 15px;
+      }
+
+      main{
+        box-sizing: border-box;
+        padding-right: 90px;
+      }
+
+      tr:nth-child(odd) {
+          background-color:#f2f2f2;
+      }
+
+      tr:nth-child(even) {
+          background-color:#fbfbfb;
       }
     </style>
     <title>React App</title>
