--- a/app/public/index.html
+++ b/app/public/index.html
@@ -29,6 +29,12 @@
         border: none;
       }
 
+      th{
+        box-sizing: border-box;
+        padding: 15px;
+        border: none;
+      }
+
       i{
         margin-left: 15px;
       }
